--- a/app.json
+++ b/app.json
@@ -4,23 +4,19 @@
     "slug": "infinigoal-ecommerce-app",
     "version": "1.0.0",
     "orientation": "portrait",
-
-    "icon": "./assets/images/InfiniGoal.png", 
+    "icon": "./assets/images/InfiniGoal.png",
     "scheme": "infinigoal",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.infinigoal.ecommerce"
     },
-
     "android": {
       "package": "com.infinigoal.ecommerce",
       "adaptiveIcon": {
@@ -30,13 +26,11 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
-
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-
     "plugins": [
       "expo-router",
       [
@@ -52,11 +46,18 @@
         }
       ]
     ],
-
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "b5ba9731-d23b-4d32-9e77-98d2560a2768"
+      }
     }
   }
 }
